--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,35 +1,16 @@
-{% extends "base.html" %}
-
-{% load i18n %}
-{% load account socialaccount %}
-
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
-
-{% block content %}
-
-<div class="container shadow-lg p-3 mb-5 bg-body rounded">
+{% extends "base.html" %} {% load i18n %} {% load account socialaccount %} {% block head_title %}{% trans "Sign In" %}{% endblock %} {% block content %} <div class="container shadow-lg p-3 mb-5 bg-body rounded">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign In" %}</h3>
-
-      <p>{% blocktrans %}Welcome back to Embarr Equestrian. To leave a review, please log in. If you
-        have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
-        first.{% endblocktrans %}</p>
+      <p>{% blocktrans %}Welcome back to Embarr Equestrian. To leave a review, please log in. If you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a> first.{% endblocktrans %} </p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <div class="card-body">
-      <form class="login" method="POST" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <button class="btn btn-primary  btn-lg" type="submit">{% trans "Sign In" %}</button>
-      </form>
+        <form class="login" method="POST" action="{% url 'account_login' %}"> {% csrf_token %} {{ form.as_p }} {% if redirect_field_value %} <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" /> {% endif %} <button class="btn btn-primary  btn-lg" type="submit">{% trans "Sign In" %}</button>
+        </form>
       </div>
     </div>
   </div>
-</div>
-{% endblock %}
+</div> {% endblock %}
