--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,31 +1,15 @@
-{% extends "base.html" %}
-
-{% load i18n %}
-
-{% block head_title %}{% trans "Signup" %}{% endblock %}
-
-{% block content %}
-<div class="container shadow-lg p-3 mb-5 bg-body rounded">
+{% extends "base.html" %} {% load i18n %} {% block head_title %}{% trans "Sign Out" %}{% endblock %} {% block content %} <div class="container shadow-lg p-3 mb-5 bg-body rounded">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <h3>{% trans "Sign Up" %}</h3>
-
-      <p>{% blocktrans %}Welcome back to Embarr Equestrian. Do you already have an account? Then please <a class="link"
-          href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
+      <h3>{% trans "Sign Out" %}</h3>
+      <br>
+      <p>{% trans 'Are you sure you want to sign out?' %}</p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <button class="btn btn-primary  btn-lg" type="submit">{% trans "Sign Up" %} &raquo;</button>
+      <form method="post" action="{% url 'account_logout' %}"> {% csrf_token %} {% if redirect_field_value %} <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" /> {% endif %} <button class="btn btn-primary  btn-lg" type="submit">{% trans 'Sign Out' %}</button>
       </form>
     </div>
   </div>
-</div>
-
-{% endblock %}
+</div> {% endblock %}
