--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,11 +1,15 @@
+{% extends "base.html" %}
+
+{% load i18n %}
+
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+
+<div class="container shadow-lg p-3 mb-5 bg-body rounded">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign Up" %}</h3>
-
       <p>{% blocktrans %}Welcome back to Embarr Equestrian Testimonials. Do you already have an account? Then please <a class="link"
           href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
     </div>
